# lizmap/modules/admin_api/controllers/repository_rest.classic.php
@@ -9,11 +9,11 @@
  * @license   https://www.mozilla.org/MPL/ Mozilla Public Licence
  */
 
-use Lizmap\CliHelpers\RepositoryCreator;
 use Lizmap\Request\Proxy;
 use LizmapAdmin\RepositoryRightsService;
 use LizmapApi\Credentials;
 use LizmapApi\Error;
+use LizmapApi\RepoCreator;
 use LizmapApi\RestApiCtrl;
 use LizmapApi\Utils;
 
@@ -119,34 +119,13 @@ class repository_restCtrl extends RestApiCtrl
             return Error::setError($rep, 401);
         }
 
-        $repo = $this->param('repo');
-
-        if (lizmap::getRepository($repo)) {
-            return Error::setError($rep, 400, "The repository '{$repo}' already exists.");
-        }
-
-        return $this->createRepo($rep);
-    }
-
-    /**
-     * Creates a new repository with the specified parameters.
-     *
-     * @param object $rep the response object to populate with the repository creation result
-     *
-     * @return object the updated response object containing the creation status
-     *                and repository details if successful, or an error message if failed
-     */
-    public function createRepo($rep): object
-    {
-        $repoCreator = new RepositoryCreator();
-
         $key = $this->param('repo');
         $label = $this->param('label');
         $path = $this->param('path');
         $allowUserDefinedThemes = $this->param('allowUserDefinedThemes', null);
 
         try {
-            $isCreated = $repoCreator->create($key, $label, $path, $allowUserDefinedThemes);
+            $isCreated = RepoCreator::createRepository($key, $label, $path, $allowUserDefinedThemes);
 
             $rep->data = array(
                 'key' => $key,
@@ -160,9 +139,8 @@ class repository_restCtrl extends RestApiCtrl
                 201,
                 Proxy::getHttpStatusMsg(201),
             );
-
         } catch (Exception $e) {
-            return Error::setError($rep, 400, $e->getMessage());
+            return Error::setError($rep, $e->getCode(), $e->getMessage());
         }
 
         return $rep;
